// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
Object {
  "alias": "allPosts",
  "args": Object {},
  "fieldsByTypeName": Object {
    "PostsConnection": Object {
      "edges": Object {
        "alias": "edges",
        "args": Object {},
        "fieldsByTypeName": Object {
          "PostEdge": Object {
            "cursor": Object {
              "alias": "cursor",
              "args": Object {},
              "fieldsByTypeName": Object {},
              "loc": Object {
                "end": 122,
                "start": 93,
              },
              "name": "cursor",
            },
            "node": Object {
              "alias": "node",
              "args": Object {},
              "fieldsByTypeName": Object {
                "Post": Object {
                  "author": Object {
                    "alias": "author",
                    "args": Object {},
                    "fieldsByTypeName": Object {
                      "Person": Object {
                        "firstName": Object {
                          "alias": "firstName",
                          "args": Object {},
                          "fieldsByTypeName": Object {},
                          "loc": Object {
                            "end": 767,
                            "start": 758,
                          },
                          "name": "firstName",
                        },
                        "firstPost": Object {
                          "alias": "firstPost",
                          "args": Object {},
                          "fieldsByTypeName": Object {
                            "Post": Object {
                              "author": Object {
                                "alias": "author",
                                "args": Object {},
                                "fieldsByTypeName": Object {
                                  "Person": Object {
                                    "firstName": Object {
                                      "alias": "firstName",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 767,
                                        "start": 758,
                                      },
                                      "name": "firstName",
                                    },
                                    "id": Object {
                                      "alias": "id",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 594,
                                        "start": 592,
                                      },
                                      "name": "id",
                                    },
                                    "name": Object {
                                      "alias": "name",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 753,
                                        "start": 749,
                                      },
                                      "name": "name",
                                    },
                                  },
                                },
                                "loc": Object {
                                  "end": 924,
                                  "start": 869,
                                },
                                "name": "personByAuthorId",
                              },
                              "headline": Object {
                                "alias": "headline",
                                "args": Object {},
                                "fieldsByTypeName": Object {},
                                "loc": Object {
                                  "end": 824,
                                  "start": 816,
                                },
                                "name": "headline",
                              },
                              "headlineTrimmed": Object {
                                "alias": "headlineTrimmed",
                                "args": Object {},
                                "fieldsByTypeName": Object {},
                                "loc": Object {
                                  "end": 864,
                                  "start": 829,
                                },
                                "name": "headlineTrimmed",
                              },
                              "id": Object {
                                "alias": "id",
                                "args": Object {},
                                "fieldsByTypeName": Object {},
                                "loc": Object {
                                  "end": 811,
                                  "start": 809,
                                },
                                "name": "id",
                              },
                            },
                          },
                          "loc": Object {
                            "end": 266,
                            "start": 212,
                          },
                          "name": "firstPost",
                        },
                        "friends": Object {
                          "alias": "friends",
                          "args": Object {},
                          "fieldsByTypeName": Object {
                            "PersonConnection": Object {
                              "nodes": Object {
                                "alias": "nodes",
                                "args": Object {},
                                "fieldsByTypeName": Object {
                                  "Person": Object {
                                    "firstName": Object {
                                      "alias": "firstName",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 767,
                                        "start": 758,
                                      },
                                      "name": "firstName",
                                    },
                                    "id": Object {
                                      "alias": "id",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 594,
                                        "start": 592,
                                      },
                                      "name": "id",
                                    },
                                    "name": Object {
                                      "alias": "name",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 753,
                                        "start": 749,
                                      },
                                      "name": "name",
                                    },
                                  },
                                },
                                "loc": Object {
                                  "end": 359,
                                  "start": 303,
                                },
                                "name": "nodes",
                              },
                              "pageInfo": Object {
                                "alias": "pageInfo",
                                "args": Object {},
                                "fieldsByTypeName": Object {
                                  "PageInfo": Object {
                                    "startCursor": Object {
                                      "alias": "startCursor",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 480,
                                        "start": 469,
                                      },
                                      "name": "startCursor",
                                    },
                                  },
                                },
                                "loc": Object {
                                  "end": 496,
                                  "start": 422,
                                },
                                "name": "pageInfo",
                              },
                              "totalCount": Object {
                                "alias": "totalCount",
                                "args": Object {},
                                "fieldsByTypeName": Object {},
                                "loc": Object {
                                  "end": 407,
                                  "start": 374,
                                },
                                "name": "totalCount",
                              },
                            },
                          },
                          "loc": Object {
                            "end": 510,
                            "start": 279,
                          },
                          "name": "friends",
                        },
                        "id": Object {
                          "alias": "id",
                          "args": Object {},
                          "fieldsByTypeName": Object {},
                          "loc": Object {
                            "end": 594,
                            "start": 592,
                          },
                          "name": "id",
                        },
                        "name": Object {
                          "alias": "name",
                          "args": Object {},
                          "fieldsByTypeName": Object {},
                          "loc": Object {
                            "end": 753,
                            "start": 749,
                          },
                          "name": "name",
                        },
                      },
                    },
                    "loc": Object {
                      "end": 924,
                      "start": 869,
                    },
                    "name": "personByAuthorId",
                  },
                  "headline": Object {
                    "alias": "headline",
                    "args": Object {},
                    "fieldsByTypeName": Object {},
                    "loc": Object {
                      "end": 824,
                      "start": 816,
                    },
                    "name": "headline",
                  },
                  "headlineTrimmed": Object {
                    "alias": "headlineTrimmed",
                    "args": Object {},
                    "fieldsByTypeName": Object {},
                    "loc": Object {
                      "end": 864,
                      "start": 829,
                    },
                    "name": "headlineTrimmed",
                  },
                  "id": Object {
                    "alias": "id",
                    "args": Object {},
                    "fieldsByTypeName": Object {},
                    "loc": Object {
                      "end": 811,
                      "start": 809,
                    },
                    "name": "id",
                  },
                },
              },
              "loc": Object {
                "end": 532,
                "start": 131,
              },
              "name": "node",
            },
          },
        },
        "loc": Object {
          "end": 540,
          "start": 77,
        },
        "name": "edges",
      },
    },
  },
  "loc": Object {
    "end": 546,
    "start": 60,
  },
  "name": "allPosts",
}
`;

exports[`basic 2`] = `
Object {
  "alias": "allPosts",
  "args": Object {},
  "fields": Object {
    "edges": Object {
      "alias": "edges",
      "args": Object {},
      "fieldsByTypeName": Object {
        "PostEdge": Object {
          "cursor": Object {
            "alias": "cursor",
            "args": Object {},
            "fieldsByTypeName": Object {},
            "loc": Object {
              "end": 122,
              "start": 93,
            },
            "name": "cursor",
          },
          "node": Object {
            "alias": "node",
            "args": Object {},
            "fieldsByTypeName": Object {
              "Post": Object {
                "author": Object {
                  "alias": "author",
                  "args": Object {},
                  "fieldsByTypeName": Object {
                    "Person": Object {
                      "firstName": Object {
                        "alias": "firstName",
                        "args": Object {},
                        "fieldsByTypeName": Object {},
                        "loc": Object {
                          "end": 767,
                          "start": 758,
                        },
                        "name": "firstName",
                      },
                      "firstPost": Object {
                        "alias": "firstPost",
                        "args": Object {},
                        "fieldsByTypeName": Object {
                          "Post": Object {
                            "author": Object {
                              "alias": "author",
                              "args": Object {},
                              "fieldsByTypeName": Object {
                                "Person": Object {
                                  "firstName": Object {
                                    "alias": "firstName",
                                    "args": Object {},
                                    "fieldsByTypeName": Object {},
                                    "loc": Object {
                                      "end": 767,
                                      "start": 758,
                                    },
                                    "name": "firstName",
                                  },
                                  "id": Object {
                                    "alias": "id",
                                    "args": Object {},
                                    "fieldsByTypeName": Object {},
                                    "loc": Object {
                                      "end": 594,
                                      "start": 592,
                                    },
                                    "name": "id",
                                  },
                                  "name": Object {
                                    "alias": "name",
                                    "args": Object {},
                                    "fieldsByTypeName": Object {},
                                    "loc": Object {
                                      "end": 753,
                                      "start": 749,
                                    },
                                    "name": "name",
                                  },
                                },
                              },
                              "loc": Object {
                                "end": 924,
                                "start": 869,
                              },
                              "name": "personByAuthorId",
                            },
                            "headline": Object {
                              "alias": "headline",
                              "args": Object {},
                              "fieldsByTypeName": Object {},
                              "loc": Object {
                                "end": 824,
                                "start": 816,
                              },
                              "name": "headline",
                            },
                            "headlineTrimmed": Object {
                              "alias": "headlineTrimmed",
                              "args": Object {},
                              "fieldsByTypeName": Object {},
                              "loc": Object {
                                "end": 864,
                                "start": 829,
                              },
                              "name": "headlineTrimmed",
                            },
                            "id": Object {
                              "alias": "id",
                              "args": Object {},
                              "fieldsByTypeName": Object {},
                              "loc": Object {
                                "end": 811,
                                "start": 809,
                              },
                              "name": "id",
                            },
                          },
                        },
                        "loc": Object {
                          "end": 266,
                          "start": 212,
                        },
                        "name": "firstPost",
                      },
                      "friends": Object {
                        "alias": "friends",
                        "args": Object {},
                        "fieldsByTypeName": Object {
                          "PersonConnection": Object {
                            "nodes": Object {
                              "alias": "nodes",
                              "args": Object {},
                              "fieldsByTypeName": Object {
                                "Person": Object {
                                  "firstName": Object {
                                    "alias": "firstName",
                                    "args": Object {},
                                    "fieldsByTypeName": Object {},
                                    "loc": Object {
                                      "end": 767,
                                      "start": 758,
                                    },
                                    "name": "firstName",
                                  },
                                  "id": Object {
                                    "alias": "id",
                                    "args": Object {},
                                    "fieldsByTypeName": Object {},
                                    "loc": Object {
                                      "end": 594,
                                      "start": 592,
                                    },
                                    "name": "id",
                                  },
                                  "name": Object {
                                    "alias": "name",
                                    "args": Object {},
                                    "fieldsByTypeName": Object {},
                                    "loc": Object {
                                      "end": 753,
                                      "start": 749,
                                    },
                                    "name": "name",
                                  },
                                },
                              },
                              "loc": Object {
                                "end": 359,
                                "start": 303,
                              },
                              "name": "nodes",
                            },
                            "pageInfo": Object {
                              "alias": "pageInfo",
                              "args": Object {},
                              "fieldsByTypeName": Object {
                                "PageInfo": Object {
                                  "startCursor": Object {
                                    "alias": "startCursor",
                                    "args": Object {},
                                    "fieldsByTypeName": Object {},
                                    "loc": Object {
                                      "end": 480,
                                      "start": 469,
                                    },
                                    "name": "startCursor",
                                  },
                                },
                              },
                              "loc": Object {
                                "end": 496,
                                "start": 422,
                              },
                              "name": "pageInfo",
                            },
                            "totalCount": Object {
                              "alias": "totalCount",
                              "args": Object {},
                              "fieldsByTypeName": Object {},
                              "loc": Object {
                                "end": 407,
                                "start": 374,
                              },
                              "name": "totalCount",
                            },
                          },
                        },
                        "loc": Object {
                          "end": 510,
                          "start": 279,
                        },
                        "name": "friends",
                      },
                      "id": Object {
                        "alias": "id",
                        "args": Object {},
                        "fieldsByTypeName": Object {},
                        "loc": Object {
                          "end": 594,
                          "start": 592,
                        },
                        "name": "id",
                      },
                      "name": Object {
                        "alias": "name",
                        "args": Object {},
                        "fieldsByTypeName": Object {},
                        "loc": Object {
                          "end": 753,
                          "start": 749,
                        },
                        "name": "name",
                      },
                    },
                  },
                  "loc": Object {
                    "end": 924,
                    "start": 869,
                  },
                  "name": "personByAuthorId",
                },
                "headline": Object {
                  "alias": "headline",
                  "args": Object {},
                  "fieldsByTypeName": Object {},
                  "loc": Object {
                    "end": 824,
                    "start": 816,
                  },
                  "name": "headline",
                },
                "headlineTrimmed": Object {
                  "alias": "headlineTrimmed",
                  "args": Object {},
                  "fieldsByTypeName": Object {},
                  "loc": Object {
                    "end": 864,
                    "start": 829,
                  },
                  "name": "headlineTrimmed",
                },
                "id": Object {
                  "alias": "id",
                  "args": Object {},
                  "fieldsByTypeName": Object {},
                  "loc": Object {
                    "end": 811,
                    "start": 809,
                  },
                  "name": "id",
                },
              },
            },
            "loc": Object {
              "end": 532,
              "start": 131,
            },
            "name": "node",
          },
        },
      },
      "loc": Object {
        "end": 540,
        "start": 77,
      },
      "name": "edges",
    },
  },
  "fieldsByTypeName": Object {
    "PostsConnection": Object {
      "edges": Object {
        "alias": "edges",
        "args": Object {},
        "fieldsByTypeName": Object {
          "PostEdge": Object {
            "cursor": Object {
              "alias": "cursor",
              "args": Object {},
              "fieldsByTypeName": Object {},
              "loc": Object {
                "end": 122,
                "start": 93,
              },
              "name": "cursor",
            },
            "node": Object {
              "alias": "node",
              "args": Object {},
              "fieldsByTypeName": Object {
                "Post": Object {
                  "author": Object {
                    "alias": "author",
                    "args": Object {},
                    "fieldsByTypeName": Object {
                      "Person": Object {
                        "firstName": Object {
                          "alias": "firstName",
                          "args": Object {},
                          "fieldsByTypeName": Object {},
                          "loc": Object {
                            "end": 767,
                            "start": 758,
                          },
                          "name": "firstName",
                        },
                        "firstPost": Object {
                          "alias": "firstPost",
                          "args": Object {},
                          "fieldsByTypeName": Object {
                            "Post": Object {
                              "author": Object {
                                "alias": "author",
                                "args": Object {},
                                "fieldsByTypeName": Object {
                                  "Person": Object {
                                    "firstName": Object {
                                      "alias": "firstName",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 767,
                                        "start": 758,
                                      },
                                      "name": "firstName",
                                    },
                                    "id": Object {
                                      "alias": "id",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 594,
                                        "start": 592,
                                      },
                                      "name": "id",
                                    },
                                    "name": Object {
                                      "alias": "name",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 753,
                                        "start": 749,
                                      },
                                      "name": "name",
                                    },
                                  },
                                },
                                "loc": Object {
                                  "end": 924,
                                  "start": 869,
                                },
                                "name": "personByAuthorId",
                              },
                              "headline": Object {
                                "alias": "headline",
                                "args": Object {},
                                "fieldsByTypeName": Object {},
                                "loc": Object {
                                  "end": 824,
                                  "start": 816,
                                },
                                "name": "headline",
                              },
                              "headlineTrimmed": Object {
                                "alias": "headlineTrimmed",
                                "args": Object {},
                                "fieldsByTypeName": Object {},
                                "loc": Object {
                                  "end": 864,
                                  "start": 829,
                                },
                                "name": "headlineTrimmed",
                              },
                              "id": Object {
                                "alias": "id",
                                "args": Object {},
                                "fieldsByTypeName": Object {},
                                "loc": Object {
                                  "end": 811,
                                  "start": 809,
                                },
                                "name": "id",
                              },
                            },
                          },
                          "loc": Object {
                            "end": 266,
                            "start": 212,
                          },
                          "name": "firstPost",
                        },
                        "friends": Object {
                          "alias": "friends",
                          "args": Object {},
                          "fieldsByTypeName": Object {
                            "PersonConnection": Object {
                              "nodes": Object {
                                "alias": "nodes",
                                "args": Object {},
                                "fieldsByTypeName": Object {
                                  "Person": Object {
                                    "firstName": Object {
                                      "alias": "firstName",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 767,
                                        "start": 758,
                                      },
                                      "name": "firstName",
                                    },
                                    "id": Object {
                                      "alias": "id",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 594,
                                        "start": 592,
                                      },
                                      "name": "id",
                                    },
                                    "name": Object {
                                      "alias": "name",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 753,
                                        "start": 749,
                                      },
                                      "name": "name",
                                    },
                                  },
                                },
                                "loc": Object {
                                  "end": 359,
                                  "start": 303,
                                },
                                "name": "nodes",
                              },
                              "pageInfo": Object {
                                "alias": "pageInfo",
                                "args": Object {},
                                "fieldsByTypeName": Object {
                                  "PageInfo": Object {
                                    "startCursor": Object {
                                      "alias": "startCursor",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 480,
                                        "start": 469,
                                      },
                                      "name": "startCursor",
                                    },
                                  },
                                },
                                "loc": Object {
                                  "end": 496,
                                  "start": 422,
                                },
                                "name": "pageInfo",
                              },
                              "totalCount": Object {
                                "alias": "totalCount",
                                "args": Object {},
                                "fieldsByTypeName": Object {},
                                "loc": Object {
                                  "end": 407,
                                  "start": 374,
                                },
                                "name": "totalCount",
                              },
                            },
                          },
                          "loc": Object {
                            "end": 510,
                            "start": 279,
                          },
                          "name": "friends",
                        },
                        "id": Object {
                          "alias": "id",
                          "args": Object {},
                          "fieldsByTypeName": Object {},
                          "loc": Object {
                            "end": 594,
                            "start": 592,
                          },
                          "name": "id",
                        },
                        "name": Object {
                          "alias": "name",
                          "args": Object {},
                          "fieldsByTypeName": Object {},
                          "loc": Object {
                            "end": 753,
                            "start": 749,
                          },
                          "name": "name",
                        },
                      },
                    },
                    "loc": Object {
                      "end": 924,
                      "start": 869,
                    },
                    "name": "personByAuthorId",
                  },
                  "headline": Object {
                    "alias": "headline",
                    "args": Object {},
                    "fieldsByTypeName": Object {},
                    "loc": Object {
                      "end": 824,
                      "start": 816,
                    },
                    "name": "headline",
                  },
                  "headlineTrimmed": Object {
                    "alias": "headlineTrimmed",
                    "args": Object {},
                    "fieldsByTypeName": Object {},
                    "loc": Object {
                      "end": 864,
                      "start": 829,
                    },
                    "name": "headlineTrimmed",
                  },
                  "id": Object {
                    "alias": "id",
                    "args": Object {},
                    "fieldsByTypeName": Object {},
                    "loc": Object {
                      "end": 811,
                      "start": 809,
                    },
                    "name": "id",
                  },
                },
              },
              "loc": Object {
                "end": 532,
                "start": 131,
              },
              "name": "node",
            },
          },
        },
        "loc": Object {
          "end": 540,
          "start": 77,
        },
        "name": "edges",
      },
    },
  },
  "loc": Object {
    "end": 546,
    "start": 60,
  },
  "name": "allPosts",
}
`;

exports[`directives 1`] = `
Object {
  "alias": "allPosts",
  "args": Object {},
  "fieldsByTypeName": Object {
    "PostsConnection": Object {
      "edges": Object {
        "alias": "edges",
        "args": Object {},
        "fieldsByTypeName": Object {
          "PostEdge": Object {
            "node": Object {
              "alias": "node",
              "args": Object {},
              "fieldsByTypeName": Object {
                "Post": Object {
                  "author": Object {
                    "alias": "author",
                    "args": Object {},
                    "fieldsByTypeName": Object {
                      "Person": Object {
                        "firstPost": Object {
                          "alias": "firstPost",
                          "args": Object {},
                          "fieldsByTypeName": Object {
                            "Post": Object {
                              "author": Object {
                                "alias": "author",
                                "args": Object {},
                                "fieldsByTypeName": Object {
                                  "Person": Object {
                                    "id": Object {
                                      "alias": "id",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 594,
                                        "start": 592,
                                      },
                                      "name": "id",
                                    },
                                  },
                                },
                                "loc": Object {
                                  "end": 924,
                                  "start": 869,
                                },
                                "name": "personByAuthorId",
                              },
                              "headline": Object {
                                "alias": "headline",
                                "args": Object {},
                                "fieldsByTypeName": Object {},
                                "loc": Object {
                                  "end": 824,
                                  "start": 816,
                                },
                                "name": "headline",
                              },
                              "id": Object {
                                "alias": "id",
                                "args": Object {},
                                "fieldsByTypeName": Object {},
                                "loc": Object {
                                  "end": 811,
                                  "start": 809,
                                },
                                "name": "id",
                              },
                            },
                          },
                          "loc": Object {
                            "end": 266,
                            "start": 212,
                          },
                          "name": "firstPost",
                        },
                        "friends": Object {
                          "alias": "friends",
                          "args": Object {},
                          "fieldsByTypeName": Object {
                            "PersonConnection": Object {
                              "nodes": Object {
                                "alias": "nodes",
                                "args": Object {},
                                "fieldsByTypeName": Object {
                                  "Person": Object {
                                    "id": Object {
                                      "alias": "id",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 594,
                                        "start": 592,
                                      },
                                      "name": "id",
                                    },
                                  },
                                },
                                "loc": Object {
                                  "end": 359,
                                  "start": 303,
                                },
                                "name": "nodes",
                              },
                            },
                          },
                          "loc": Object {
                            "end": 510,
                            "start": 279,
                          },
                          "name": "friends",
                        },
                        "id": Object {
                          "alias": "id",
                          "args": Object {},
                          "fieldsByTypeName": Object {},
                          "loc": Object {
                            "end": 594,
                            "start": 592,
                          },
                          "name": "id",
                        },
                      },
                    },
                    "loc": Object {
                      "end": 924,
                      "start": 869,
                    },
                    "name": "personByAuthorId",
                  },
                  "headline": Object {
                    "alias": "headline",
                    "args": Object {},
                    "fieldsByTypeName": Object {},
                    "loc": Object {
                      "end": 824,
                      "start": 816,
                    },
                    "name": "headline",
                  },
                  "id": Object {
                    "alias": "id",
                    "args": Object {},
                    "fieldsByTypeName": Object {},
                    "loc": Object {
                      "end": 811,
                      "start": 809,
                    },
                    "name": "id",
                  },
                },
              },
              "loc": Object {
                "end": 532,
                "start": 131,
              },
              "name": "node",
            },
          },
        },
        "loc": Object {
          "end": 540,
          "start": 77,
        },
        "name": "edges",
      },
    },
  },
  "loc": Object {
    "end": 546,
    "start": 60,
  },
  "name": "allPosts",
}
`;

exports[`directives 2`] = `
Object {
  "alias": "allPosts",
  "args": Object {},
  "fields": Object {
    "edges": Object {
      "alias": "edges",
      "args": Object {},
      "fieldsByTypeName": Object {
        "PostEdge": Object {
          "node": Object {
            "alias": "node",
            "args": Object {},
            "fieldsByTypeName": Object {
              "Post": Object {
                "author": Object {
                  "alias": "author",
                  "args": Object {},
                  "fieldsByTypeName": Object {
                    "Person": Object {
                      "firstPost": Object {
                        "alias": "firstPost",
                        "args": Object {},
                        "fieldsByTypeName": Object {
                          "Post": Object {
                            "author": Object {
                              "alias": "author",
                              "args": Object {},
                              "fieldsByTypeName": Object {
                                "Person": Object {
                                  "id": Object {
                                    "alias": "id",
                                    "args": Object {},
                                    "fieldsByTypeName": Object {},
                                    "loc": Object {
                                      "end": 594,
                                      "start": 592,
                                    },
                                    "name": "id",
                                  },
                                },
                              },
                              "loc": Object {
                                "end": 924,
                                "start": 869,
                              },
                              "name": "personByAuthorId",
                            },
                            "headline": Object {
                              "alias": "headline",
                              "args": Object {},
                              "fieldsByTypeName": Object {},
                              "loc": Object {
                                "end": 824,
                                "start": 816,
                              },
                              "name": "headline",
                            },
                            "id": Object {
                              "alias": "id",
                              "args": Object {},
                              "fieldsByTypeName": Object {},
                              "loc": Object {
                                "end": 811,
                                "start": 809,
                              },
                              "name": "id",
                            },
                          },
                        },
                        "loc": Object {
                          "end": 266,
                          "start": 212,
                        },
                        "name": "firstPost",
                      },
                      "friends": Object {
                        "alias": "friends",
                        "args": Object {},
                        "fieldsByTypeName": Object {
                          "PersonConnection": Object {
                            "nodes": Object {
                              "alias": "nodes",
                              "args": Object {},
                              "fieldsByTypeName": Object {
                                "Person": Object {
                                  "id": Object {
                                    "alias": "id",
                                    "args": Object {},
                                    "fieldsByTypeName": Object {},
                                    "loc": Object {
                                      "end": 594,
                                      "start": 592,
                                    },
                                    "name": "id",
                                  },
                                },
                              },
                              "loc": Object {
                                "end": 359,
                                "start": 303,
                              },
                              "name": "nodes",
                            },
                          },
                        },
                        "loc": Object {
                          "end": 510,
                          "start": 279,
                        },
                        "name": "friends",
                      },
                      "id": Object {
                        "alias": "id",
                        "args": Object {},
                        "fieldsByTypeName": Object {},
                        "loc": Object {
                          "end": 594,
                          "start": 592,
                        },
                        "name": "id",
                      },
                    },
                  },
                  "loc": Object {
                    "end": 924,
                    "start": 869,
                  },
                  "name": "personByAuthorId",
                },
                "headline": Object {
                  "alias": "headline",
                  "args": Object {},
                  "fieldsByTypeName": Object {},
                  "loc": Object {
                    "end": 824,
                    "start": 816,
                  },
                  "name": "headline",
                },
                "id": Object {
                  "alias": "id",
                  "args": Object {},
                  "fieldsByTypeName": Object {},
                  "loc": Object {
                    "end": 811,
                    "start": 809,
                  },
                  "name": "id",
                },
              },
            },
            "loc": Object {
              "end": 532,
              "start": 131,
            },
            "name": "node",
          },
        },
      },
      "loc": Object {
        "end": 540,
        "start": 77,
      },
      "name": "edges",
    },
  },
  "fieldsByTypeName": Object {
    "PostsConnection": Object {
      "edges": Object {
        "alias": "edges",
        "args": Object {},
        "fieldsByTypeName": Object {
          "PostEdge": Object {
            "node": Object {
              "alias": "node",
              "args": Object {},
              "fieldsByTypeName": Object {
                "Post": Object {
                  "author": Object {
                    "alias": "author",
                    "args": Object {},
                    "fieldsByTypeName": Object {
                      "Person": Object {
                        "firstPost": Object {
                          "alias": "firstPost",
                          "args": Object {},
                          "fieldsByTypeName": Object {
                            "Post": Object {
                              "author": Object {
                                "alias": "author",
                                "args": Object {},
                                "fieldsByTypeName": Object {
                                  "Person": Object {
                                    "id": Object {
                                      "alias": "id",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 594,
                                        "start": 592,
                                      },
                                      "name": "id",
                                    },
                                  },
                                },
                                "loc": Object {
                                  "end": 924,
                                  "start": 869,
                                },
                                "name": "personByAuthorId",
                              },
                              "headline": Object {
                                "alias": "headline",
                                "args": Object {},
                                "fieldsByTypeName": Object {},
                                "loc": Object {
                                  "end": 824,
                                  "start": 816,
                                },
                                "name": "headline",
                              },
                              "id": Object {
                                "alias": "id",
                                "args": Object {},
                                "fieldsByTypeName": Object {},
                                "loc": Object {
                                  "end": 811,
                                  "start": 809,
                                },
                                "name": "id",
                              },
                            },
                          },
                          "loc": Object {
                            "end": 266,
                            "start": 212,
                          },
                          "name": "firstPost",
                        },
                        "friends": Object {
                          "alias": "friends",
                          "args": Object {},
                          "fieldsByTypeName": Object {
                            "PersonConnection": Object {
                              "nodes": Object {
                                "alias": "nodes",
                                "args": Object {},
                                "fieldsByTypeName": Object {
                                  "Person": Object {
                                    "id": Object {
                                      "alias": "id",
                                      "args": Object {},
                                      "fieldsByTypeName": Object {},
                                      "loc": Object {
                                        "end": 594,
                                        "start": 592,
                                      },
                                      "name": "id",
                                    },
                                  },
                                },
                                "loc": Object {
                                  "end": 359,
                                  "start": 303,
                                },
                                "name": "nodes",
                              },
                            },
                          },
                          "loc": Object {
                            "end": 510,
                            "start": 279,
                          },
                          "name": "friends",
                        },
                        "id": Object {
                          "alias": "id",
                          "args": Object {},
                          "fieldsByTypeName": Object {},
                          "loc": Object {
                            "end": 594,
                            "start": 592,
                          },
                          "name": "id",
                        },
                      },
                    },
                    "loc": Object {
                      "end": 924,
                      "start": 869,
                    },
                    "name": "personByAuthorId",
                  },
                  "headline": Object {
                    "alias": "headline",
                    "args": Object {},
                    "fieldsByTypeName": Object {},
                    "loc": Object {
                      "end": 824,
                      "start": 816,
                    },
                    "name": "headline",
                  },
                  "id": Object {
                    "alias": "id",
                    "args": Object {},
                    "fieldsByTypeName": Object {},
                    "loc": Object {
                      "end": 811,
                      "start": 809,
                    },
                    "name": "id",
                  },
                },
              },
              "loc": Object {
                "end": 532,
                "start": 131,
              },
              "name": "node",
            },
          },
        },
        "loc": Object {
          "end": 540,
          "start": 77,
        },
        "name": "edges",
      },
    },
  },
  "loc": Object {
    "end": 546,
    "start": 60,
  },
  "name": "allPosts",
}
`;
